--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<h1>Ankur Abhinav</h1>	
 					
 					
-					<img src="img/ankur.jpg" height="60%" width="60%">
+					<img src="ankur.jpg" height="60%" width="60%">
 				</section>
 
 				<section>
