--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
@@ -47,7 +46,7 @@
 						<ul><li>3rd year undergraduate <br>Computer Science and Engineering <br>Indian Institute of Technology Kharagpur 
 						</ul>
 					</p>
-					<img src="img/iit.jpg" height="50%" width="50%">					
+					<img src="iit.jpg" height="50%" width="50%">					
 				</section>
 
 				<section>
@@ -56,7 +55,7 @@
 						<ul><li>New Delhi <br>Capital of India <br>Enriched with diverse cultures
 						</ul>
 					</p>
-					<img src="img/delhi.jpg" height="60%" width="60%">					
+					<img src="delhi.jpg" height="60%" width="60%">					
 				</section>
 
 				<section>
@@ -86,15 +85,15 @@
 				</section>
 				<section>
 					<h3>Searching Apparels in Banners or Videos</h3><br>					
-					<img src="img/1.png" height="75%" width="75%">
+					<img src="1.png" height="75%" width="75%">
 				</section>
 				<section>
 					<h2>How we did it</h2><br>					
-					<img src="img/2.png" height="75%" width="75%">
+					<img src="2.png" height="75%" width="75%">
 				</section>
 				<section>
 					<h3>Localization of Query Image Into Target</h3><br>					
-					<img src="img/3.png" height="75%" width="75%">
+					<img src="3.png" height="75%" width="75%">
 				</section>
 				<section>
 					<h2>Uses</h2>					
@@ -135,11 +134,11 @@ error-free template of the prescription.
 				</section>
 				<section>
 					<h2>Input handwritten prescription</h2>				
-					<img src="img/4.png" height="40%" width="40%">
+					<img src="4.png" height="40%" width="40%">
 				</section>
 				<section>
 					<h2>Final Digitized Prescription</h2>					
-					<img src="img/5.png" height="40%" width="40%">
+					<img src="5.png" height="40%" width="40%">
 				</section>				
 				</section>
 
